--- a/index.html
+++ b/index.html
@@ -1,25 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>daniel james // software developer</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="flex-container">
-            <ul class="nav">
-                <li><a href="#">about</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a href="#">contact</a></li>
-            </ul>
-        </div>
+      <div class="flex-container">
+        <ul class="nav">
+          <li><a href="#about-section">about</a></li>
+          <li><a href="#projects-section">projects</a></li>
+          <li><a href="#contact-section">contact</a></li>
+        </ul>
+      </div>
     </nav>
     <header class="landing typewriter">
-                <h1>daniel james.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <h1>daniel james.</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <button onclick="topFunction()" id="myBtn" title="Go to top">ᐱ</button>
     </header>
-</body>
+    <section class="about-me" id="about-section">
+      <div class="about-me-flex">
+        <h2>about me.</h2>
+        <div class="about-me-side-by-side">
+          <img
+            src="./pictures/portrait-placeholder.jpg"
+            alt="A placeholder portrait image" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi
+            error cupiditate obcaecati, explicabo perspiciatis illum. Eaque
+            veritatis nam quam pariatur voluptates facilis distinctio hic in!
+            Molestiae vel aspernatur eos. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Sed impedit odio sequi, nobis commodi tenetur
+            quidem porro asperiores accusamus quisquam corporis vero,
+            consequuntur iure aut vitae provident eveniet nihil architecto?
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="projects" id="projects-section">
+      <div class="projects-flex">
+        <h2>projects.</h2>
+        <div class="projects-1">
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+        </div>
+        <div class="projects-2">
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+          <img
+            src="/pictures/box-placeholder.jpg"
+            alt="A placeholder box image" />
+        </div>
+      </div>
+    </section>
+    <section class="contact" id="contact-section">
+      <div class="contact-flex">
+        <h2>contact me.</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          quia, deleniti quae tempore impedit vel sint, asperiores ex, et
+          officia voluptatem porro ipsa sed accusantium quibusdam enim hic
+          incidunt dolores.
+        </p>
+        <form>
+          <input
+            name="name"
+            type="text"
+            class="feedback-input"
+            placeholder="Name" />
+          <input
+            name="email"
+            type="text"
+            class="feedback-input"
+            placeholder="Email" />
+          <textarea
+            name="text"
+            class="feedback-input"
+            placeholder="Your message here.."></textarea>
+          <input type="submit" value="SUBMIT" />
+        </form>
+      </div>
+    </section>
+    <script>
+      let mybutton = document.getElementById("myBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 50 ||
+          document.documentElement.scrollTop > 50
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        document.body.scrollTop = 0; // For Safari
+        document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+      }
+    </script>
+  </body>
 </html>
